# divyadrishti

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: .mcp.json  phase1_plan.md  phase2_plan.md  phase3_plan.md
agents/: celery_app.py  config.py
agents/author_integrity/: tasks.py
agents/metric_gardener/: labeling.py  tasks.py  topic_discovery.py
agents/metric_mapper/: tasks.py
agents/moderator/: tasks.py
agents/normalizer/: tasks.py
agents/opinion_analyst/: tasks.py
agents/rollup_accountant/: formulas.py  tasks.py
agents/supervisor/: schedule.py  tasks.py
agents/thread_harvester/: tasks.py
agents/trend_scout/: backfill.py  tasks.py
apps/api/: db.py  main.py  middleware.py  scheduler.py
apps/web/: package.json  tailwind.config.ts
libs/events/: channels.py  consumer.py  publisher.py
libs/hn_clients/: algolia.py  firebase.py
libs/nlp/: embeddings.py  navigator.py  sentiment.py
libs/schemas/: api_responses.py  author_profile.py  embedding.py  hn_item.py  item_metric_edge.py  metric_node.py  metric_rollup.py  moderation_flag.py  opinion_signal.py  watchlist.py
libs/storage/: author_profile_repository.py  backfill_state_repository.py  connection.py  embedding_repository.py  hn_item_repository.py  item_metric_edge_repository.py  metric_node_repository.py  metric_rollup_repository.py  moderation_flag_repository.py  opinion_signal_repository.py  schema.py  watchlist_repository.py
libs/utils/: hashing.py  moderation.py  text_clean.py
tests/agents/: test_author_integrity.py  test_backfill.py  test_config.py  test_metric_gardener.py  (+9 more)
(+49 files in other folders)
